fix(primeng/p-tabmenu): not visible menu item, update style for .p-hidden
Fixes #12823.

--- a/src/app/components/tabmenu/tabmenu.css
+++ b/src/app/components/tabmenu/tabmenu.css
@@ -73,6 +73,6 @@
     display: none;
 }
 
-.p-tabmenuitem {
+.p-tabmenuitem:not(.p-hidden) {
     display: flex;
 }
